JDKに含まれるsunパッケージを用いているコードを、別なライブラリ等に置き換えました。
Update issue 69

JDKに含まれるsunパッケージを用いているコードを、別なライブラリ等に置き換えました。
具体的には、sun.misc.BASE64Decoderをorg.apache.commons.codecの物に置き換えました。

git-svn-id: http://aipo.googlecode.com/svn/trunk@88 b7d4e767-949e-c8c6-5735-6c11b8a2f74f